# hard-job-easy-job

./: README.md  config.yaml  forMe.py  pyproject.toml
brainstorming/: overview.md  scraper.md
data/: company_registry.yaml
data/db/: jobs.db
data/scrapers/: careers_ey_com.py  careers_teradata_com.analysis.json  careers_teradata_com.py  fa_etvl_saasfaprod1_fa_ocs_oraclecloud_com.analysis.json  fa_etvl_saasfaprod1_fa_ocs_oraclecloud_com.py  hdjq_fa_us2_oraclecloud_com.analysis.json  hdjq_fa_us2_oraclecloud_com.py  jobs_sanofi_com.analysis.json  jobs_sanofi_com.py  usijobs_deloitte_com.py  workday.py
data/scrapers/debug/: careers.ey.com_ey_search_?createNewAlert_2026-05-14_141653.json  fa-etvl-saasfaprod1.fa.ocs.oraclecloud.c_attempt1_2026-05-20_060445.json  fa-etvl-saasfaprod1.fa.ocs.oraclecloud.c_attempt1_2026-05-20_061848.json  fa-etvl-saasfaprod1.fa.ocs.oraclecloud.c_attempt1_2026-05-20_062135.json  fa-etvl-saasfaprod1.fa.ocs.oraclecloud.c_attempt2_2026-05-20_060455.json  (+7 more)
job_agent/: llm.py  main.py
job_agent/agents/: applicator.py  matcher.py  resume_builder.py
job_agent/dashboard/: app.py
job_agent/graphs/: apply_graph.py  discovery_graph.py
job_agent/models/: __init__.py  application.py  job.py  profile.py
job_agent/scraper/: __init__.py  ats_detector.py  browser_use_scraper.py  deduplicator.py  page_analyst.py  registry.py  router.py  script_runner.py  script_writer.py  single_job.py  text_parser.py  url_handler.py
job_agent/storage/: __init__.py  db.py  migrations.py
job_agent/tools/: browser_tools.py  profile_loader.py  resume_renderer.py
