[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hard-job-easy-job"
version = "0.1.0"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "playwright (>=1.59.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typer (>=0.25.1,<0.26.0)",
    "rich (>=15.0.0,<16.0.0)",
    "langchain (>=1.3.0,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
job-agent = "job_agent.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
